# naked-function

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
naked-function-macro/: Cargo.toml
naked-function-macro/src/: asm.rs  lib.rs  naked.rs
src/: lib.rs
tests/: aarch64.rs  arm.rs  conditional.rs  rustfmt.rs  x86_64.rs
